Add initial css

--- a/style.css
+++ b/style.css
@@ -1,1 +1,14 @@
-.layout
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(100px, auto);
+    justify-items: stretch;
+    align-items: stretch;
+}
+
+.flex-child {
+    padding: 10px;
+    background-color: red;
+    margin: 10px;
+}
+
