--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 main {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-auto-rows: minmax(100px, auto);
     justify-items: stretch;
     align-items: stretch;
@@ -8,7 +8,16 @@ main {
 
 .grid-section {
     padding: 10px;
-    background-color: red;
     margin: 10px;
 }
 
+.header-logo img {
+    width: 350px;
+    height: auto;
+}
+
+.headshot-img img {
+    text-align: left;
+    width: auto;
+    height:400px;
+}
